Added Refresh Token along with Access Token. Refresh Token is being sent via cookie for security. Added JwtConfig to encapsulate JwtSettings. Added role on user table. Added role filter on endpoints only accessible my the admin